test/fail/NonLinearPatterns.ma
fun nonlin : Set -> Set -> Set
{ nonlin X X = X
}